# splitting-large-x3-parsers

./: .gitignore  CMakeLists.txt  ast.hpp  character_literal_def.cpp  compound_statement_def.cpp  control_block_body_def.cpp  control_statement_def.cpp  declaration_def.cpp  dictionary_def.cpp  enumeration_definition_def.cpp  expression_def.cpp  for_loop_def.cpp  function_definition_def.cpp  identifier_def.cpp  identifier_sequence_def.cpp  if_else_statement_def.cpp  invocation_def.cpp  let_policy_def.cpp  let_statement_def.cpp  list_def.cpp  literal_def.cpp  namespace_extension_def.cpp  namespace_scope_def.cpp  parameter_pack_def.cpp  parser_configuration.hpp  parser_declarations.cpp  parser_declarations.hpp  parser_definitions.cpp  parser_instantiation.cpp  set_policy_def.cpp  set_statement_def.cpp  statement_def.cpp  statement_terminator_def.cpp  string_literal_def.cpp  structure_definition_def.cpp  switch_statement_def.cpp  test.cpp  while_loop_def.cpp
